# rust-media-server

./: Cargo.toml
migrations/: V2_added_global_settings.sql
src/: application.rs  main.rs
src/api/routes/: hello.rs
src/clients/: public_ip.rs
src/constants/: mod.rs  server_constants.rs
src/db/: global_settings.rs  mod.rs  videos_table.rs  watched_folders_table.rs
src/folder_watcher/: watcher.rs
src/gui/: page.rs
src/service/: mod.rs  webservice.rs
src/service/video/: ffmpeg.rs  folder_change_event_handler.rs  mod.rs  movies.rs
src/service/websocket/: socket_manager.rs
videos/hls_converted/: example.m3u8  example0.ts  example1.ts  example10.ts  example11.ts  example12.ts  example13.ts  example14.ts  example15.ts  example16.ts  example17.ts  example18.ts  example19.ts  example2.ts  example20.ts  example21.ts  example22.ts  example23.ts  example24.ts  example25.ts  example26.ts  example27.ts  example28.ts  example29.ts  example3.ts  example30.ts  example4.ts  example5.ts  example6.ts  example7.ts  example8.ts  example9.ts
