[package]
name = "rust-webrtc-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1.0.70"
tokio = {version = "1.27.0", features = ["full"]}
strum_macros = "0.24.3"
async-std = "1.12.0"
webrtc = "0.7.1"
clap = "3.0"
env_logger = "0.9"
chrono = "0.4.23"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0"
log = "0.4.16"
tungstenite = { version = "0.19.0", features = ["native-tls"] }
url = "2.3.1"
actix-web = "4"
reqwest = "0.11.18"
actix-cors = "0.6.4"
